add transition effect to buttons when clicked

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       </div>
     </header>
     <div class="screen">
-      <div class="resutl">123</div>
-      <div class="currentNumber">23344</div>
+      <div class="result">123</div>
+      <div class="currentNumber">399,981</div>
     </div>
     <div class="buttons">
       <div class="calc-btn ">7</div>
