--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="love">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -21,12 +21,12 @@
       <div class="themeSelector">
         <p>theme</p>
         <label for="theme"><span>1</span><span>2</span><span>3</span></label>
-        <input type="range" name="theme" id="theme" max="2" step="1">
+        <input type="range" name="theme" id="theme-btn" min="1" max="3" step="1">
       </div>
     </header>
     <div class="screen">
-      <div class="result">123</div>
-      <div class="currentNumber">399,981</div>
+      <div class="previousNum">123</div>
+      <div class="currentNum">399,981</div>
     </div>
     <div class="buttons">
       <div class="calc-btn ">7</div>
