finish the app functionality

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="love">
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,37 +22,34 @@
       <div class="themeSelector">
         <p>theme</p>
         <label for="theme"><span>1</span><span>2</span><span>3</span></label>
-        <input type="range" name="theme" id="theme-btn" min="1" max="3" step="1">
+        <input type="range" name="theme" id="theme-btn" min="1" max="3" step="1" value="1">
       </div>
     </header>
     <div class="screen">
-      <div class="previousNum">123</div>
-      <div class="currentNum">399,981</div>
+      <div class="display2"></div>
+      <div class="display"></div>
     </div>
     <div class="buttons">
-      <div class="calc-btn ">7</div>
-      <div class="calc-btn ">8</div>
-      <div class="calc-btn ">9</div>
-      <div class="calc-btn func erase">del</div>
-      <div class="calc-btn ">4</div>
-      <div class="calc-btn ">5</div>
-      <div class="calc-btn ">6</div>
-      <div class="calc-btn func">+</div>
-      <div class="calc-btn ">1</div>
-      <div class="calc-btn ">2</div>
-      <div class="calc-btn ">3</div>
-      <div class="calc-btn func">-</div>
-      <div class="calc-btn ">.</div>
-      <div class="calc-btn ">0</div>
-      <div class="calc-btn func">/</div>
-      <div class="calc-btn func">x</div>
-      <div class="calc-btn func reset erase">reset</div>
-      <div class="calc-btn func equal">=</div>
+      <div class="calc-btn num">7</div>
+      <div class="calc-btn num">8</div>
+      <div class="calc-btn num">9</div>
+      <div class="calc-btn  erase del">del</div>
+      <div class="calc-btn num">4</div>
+      <div class="calc-btn num">5</div>
+      <div class="calc-btn num">6</div>
+      <div class="calc-btn op">+</div>
+      <div class="calc-btn num">1</div>
+      <div class="calc-btn num">2</div>
+      <div class="calc-btn num">3</div>
+      <div class="calc-btn op">-</div>
+      <div class="calc-btn num">.</div>
+      <div class="calc-btn num">0</div>
+      <div class="calc-btn op">/</div>
+      <div class="calc-btn op">x</div>
+      <div class="calc-btn  reset erase">reset</div>
+      <div class="calc-btn  equal">=</div>
     </div>
   </div>
-
-
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://twitter.com/cooolCoder">@cooolcoder</a>.
